# Inu_3D_Renderer

./: CMakeLists.txt  README.md  out_shaders_update.bat
resources/editor/: arrow.blend  arrow.blend1  arrow.gltf  editor.vert
resources/models/basic_models/: cube.blend  sphere.blend1  sphere.gltf
resources/models/global_illum_test/: global_illum_test.gltf  test.blend  test.blend1
resources/models/pixel_perfect_sel/: pixel_perfect_sel.blend  pixel_perfect_sel.blend1
resources/shaders/: dir_light.geo  dir_shadow_maps.frag  dir_shadow_maps.vert  light.vert  model.frag  model.geo  model.vert  model_mat.shader  selection.frag  selection.vert
src/: app_includes.h  inu_typedefs.h  main.cpp
src/animation/: animation.cpp  animation.h  animation_internal.cpp  skin.cpp  skin.h
src/editor/: editor_pass.cpp  editor_pass.h  move_tool.cpp  move_tool.h  pixel_perfect_sel.cpp  pixel_perfect_sel.h
src/geometry/: model.cpp  model.h
src/geometry/gltf/: gltf.cpp  (+1 more)
src/gfx/: gfx.cpp  gfx.h  light.cpp  light.h  light_probe.cpp  light_probe.h  online_renderer.cpp  online_renderer.h  opengl_gfx.cpp  opengl_gfx_helper.cpp  opengl_gfx_helper.h  ref.cpp
src/gfx_api/: gfx.h
src/lights/: dirlight.cpp  dirlight.h  light_probe.cpp  light_probe.h  spotlight.cpp  spotlight.h
src/model_loading/: model_internal.cpp  model_internal.h
src/render_passes/: pbr_render_pass.cpp  pbr_render_pass.h
src/renderer/: renderer.cpp  renderer.h
src/scene/: camera.cpp  camera.h  online_renderer.cpp  online_renderer.h  scene.cpp  scene.h
src/utils/: app_info.h  general.cpp  general.h  inu_math.cpp  inu_math.h  mats.cpp  mats.h  quaternion.cpp  test.cpp  testing_file.cpp  transform.cpp  vectors.cpp  vectors.h
src/windowing/: window.cpp  window.h
(+6 files in other folders)
